# education

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Frog/Impl/Client/: CMakeLists.txt  main.cpp
Frog/Impl/Client/impl/: ClientHandler.cpp  ClientHandler.hpp  Window.cpp  Window.hpp
Frog/Impl/Helper/: TraceLogger.cpp  TraceLogger.hpp
Frog/Impl/Server/: CMakeLists.txt  main.cpp
Frog/Impl/Server/impl/: Server.cpp  Server.hpp
education/: CMakeLists.txt  commonTypes.hpp
education/Patterns/: CMakeLists.txt
education/Patterns/AbstractFactory/src/: AbstractFactory.cpp
education/include/: commonTypes.hpp
education/patterns/: CMakeLists.txt
education/patterns/AbstractFactory/: CMakeLists.txt
education/patterns/AbstractFactory/include/: AbstractFactory.hpp
messenger/: CMakeLists.txt  main.cpp
messenger/client/: CMakeLists.txt
messenger/client/Controller/: CMakeLists.txt
messenger/client/Data/: CMakeLists.txt
messenger/client/View/: CMakeLists.txt  Logo.cpp  Logo.h  MainWindow.cpp  MainWindow.h  ViewHandler.cpp  ViewHandler.h
messenger/client/View/common/: BaseView.cpp  BaseView.h  CMakeLists.txt  timeserver.cpp  timeserver.h
messenger/doc/: doc.txt
messenger/server/: CMakeLists.txt
practice/: CMakeLists.txt  main.cpp
practice/impl/: CMakeLists.txt  TestClassA.cpp  TestClassA.hpp
practice/impl/algorithms/: CMakeLists.txt
practice/impl/stl_practice/: CMakeLists.txt  TypicalOperation.cpp  TypicalOperation.hpp
settings/: settings.txt
stl_practice/: CMakeLists.txt  main.cpp
stl_practice/impl/: CMakeLists.txt  Helper.hpp  TestClassA.cpp
stl_practice/impl/algorithms/: FindValue.cpp  FindValue.hpp
